# OpticalNeuralNetwork

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  report-ko.html  report.html  requirements.txt
kim2026/: README.md  pyproject.toml  spec.md
kim2026/.bkit/: btw-suggestions.json
kim2026/autoresearch/: d2nn_focal_pib_sweep.py  d2nn_focal_strehl_retrain.py  d2nn_loss_strategy_sweep.py  d2nn_pilot_strong_turb.py  d2nn_strong_turb_sweep.py  d2nn_sweep_telescope.py  experiment.py  fd2nn_4f_multilayer_sweep.py  fd2nn_64_strong_turb.py  loss_sweep.py  program.md  visualize_optical_path.py
kim2026/configs/: d2nn_beamreducer_roi_complex_br15cm.yaml  debug_vacuum_split_step.yaml  fso_1024_fd2nn_complex.yaml  fso_1024_train.yaml  fso_1024_train_d2nn_2cm.yaml  fso_1024_train_d2nn_beamreducer_base.yaml  fso_1024_train_d2nn_beamreducer_roi_complex_base.yaml  pilot_eval_a100.yaml  pilot_pair_generation_a100.yaml  pilot_train_a100.yaml  smoke_test.yaml  sweep_base_fd2nn.yaml
kim2026/docs/: experiment-catalog.md  fd2nn_fundamental_limit.js  fd2nn_fundamental_limit.pptx  fd2nn_sweep_results.js  fd2nn_sweep_results.pptx
kim2026/scripts/: analyze_sweep.py  check_vacuum_beam.py  compute_piston_removed_wfrms.py  create_seminar_pptx.js  dashboard_field_report.py  dashboard_sweep_results.py  draw_full_pipeline_diagram.py  eval_bucket_radius_sweep.py  eval_focal_pib_only.py  eval_strategy.py  fig_btw001_loss_physics.py  fig_sweep06_07_report.py  gen_report_figures.py  generate_beam_reduced_dataset.py  generate_canonical_pupil_dataset.py  generate_data_distance_sweep.py  generate_data_dn100um_production.py  generate_data_dn50um_lanczos.py  generate_data_dn50um_production.py  generate_data_physical_reducer.py  generate_data_pitch_rescale.py  generate_data_pitch_rescale_3km.py  generate_delta_lambda_coupling_same_z.py  generate_focal_paper_figures.py  generate_paper_figures.py  generate_sample_fields.py  generate_strong_turb_data.py  generate_strong_turb_data_2000.py  generate_telescope_data.py  generate_telescope_data_n4096.py  pipeline_sweep_report.py  plot_optical_layout_comparison.py  run_br15cm_sweep_parallel.sh  run_d2nn_beamreducer_coarse_sweep.py  run_d2nn_beamreducer_roi_complex_sweep.py  run_d2nn_br15cm_roi_complex_sweep.py  run_distance_sweep_after_0404.sh  run_fd2nn_phase_restore_study.py  run_fd2nn_sweep.py  run_pipeline.sh  (+37 more)
kim2026/tests/: test_autoresearch_phase_loss_surface.py  test_beam_reducer_alias_safe.py  test_canonical_pupil_dataset.py  test_config_schema.py  test_d2nn_beamreducer_sweep.py  test_distance_sweep_seminar_ko.py  test_evaluate_beam_cleanup.py  test_fd2nn.py  test_fd2nn_codex_run_interpreter_skill.py  test_fd2nn_figure_curator_skill.py  test_focal_pib_sweep_sanity.py  test_fso_propagation.py  test_generate_pptx_hybrid.py  test_mpl_fonts.py  test_npz_pairs.py  test_optics_core.py  test_pair_generation_smoke.py  test_paper_figure_text.py  (+8 more)
lin2018_all_optical_d2nn/: AGENT.md  CLAUDE.md  PHYSICS_REVIEW.md  README.md  pyproject.toml  spec.md
luo2022_random_diffusers_d2nn/: .gitignore  README.md  pyproject.toml  spec.md
tao2019_fourier_space_d2nn/: AGENT.md  README.md  Supplementary.txt  fig4_mnist_5l_epoch30_bs10_bgpert_summary.json  fig4_mnist_5l_epoch30_bs10_summary.json  fig4_mnist_5l_epoch30_bs500_summary.json  fig4b_mnist_bs1024_summary.json  fig4b_mnist_bs10_hybrid_v2_partial.json  fig4b_mnist_bs10_summary.json  main.txt  plot_fig4a.py  pyproject.toml  run_fig4a_4models_f1mm.py  run_fig4a_nonlinear_rerun.py  run_fig4a_per_sample_minmax.py  run_fig4b_bs10.py  run_fig4b_bs1024.py  run_fig4b_hybrid_rerun.py  spec.md  supp_s7ab_summary.json  supp_s7cd_summary.json
(+816 files in other folders)
