[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "d2nn-repro"
version = "0.1.0"
description = "Reproducible D2NN simulation and training toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "torch>=2.2",
  "torchvision>=0.17",
  "matplotlib>=3.8",
  "PyYAML>=6.0",
  "scikit-image>=0.22",
  "colorama>=0.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
d2nn-train-classifier = "d2nn.cli.train_classifier:main"
d2nn-train-imager = "d2nn.cli.train_imager:main"
d2nn-eval = "d2nn.cli.eval:main"
d2nn-export-heightmap = "d2nn.cli.export_heightmap:main"
d2nn-make-figures = "d2nn.cli.make_figures:main"
d2nn-simulate-wave-panels = "d2nn.cli.simulate_wave_panels:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
