[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luo2022-d2nn"
version = "0.1.0"
description = "Reproducible D2NN simulator for random diffuser imaging (Luo et al. 2022)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "torch>=2.2",
  "torchvision>=0.17",
  "matplotlib>=3.8",
  "PyYAML>=6.0",
  "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
luo2022-train = "luo2022_d2nn.cli.train:main"
luo2022-evaluate = "luo2022_d2nn.cli.evaluate:main"
luo2022-make-figures = "luo2022_d2nn.cli.make_figures:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
